--- a/trunk/basement/templates/stylesheet/210295197.details.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.details.tem.html
@@ -4,12 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 <title>usered.details</title>
 <link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen">
 </head>
 <body>
 <!--##begin-->
 <h1>#(ueberschrift)</h1>
 <p>#(inhalt)</p>
-
 <h2>#(login)</h2>
 <p>!#ausgaben_login</p>
 <h2>#(surname)</h2>
@@ -20,16 +20,10 @@
 <p>!#ausgaben_email</p>
 <h2>#(level)</h2>
 <p>!#ausgaben_level</p>
-
 <p>
-    <a href="!#ausgaben_edit">
-        <img height="18" width="24" src="../../images/default/edit.png" alt="g(edit)" title="g(edit)" />
-    </a>
-    <a href="!#ausgaben_back">
-        <img height="18" width="24" src="../../images/default/left.png" alt="g(back)" title="g(back)" />
-    </a>
+    <a href="!#ausgaben_edit"><img height="18" width="24" src="../../images/default/edit.png" alt="g(edit)" title="g(edit)" /></a>
+    <a href="!#ausgaben_back"><img height="18" width="24" src="../../images/default/left.png" alt="g(back)" title="g(back)" /></a>
 </p>
-
 <p>!#ausgaben_output</p>
 <p>!#ausgaben_inaccessible</p>
 <!--##end-->
