--- a/trunk/basement/templates/stylesheet/852881080.modify.tem.html
+++ b/trunk/basement/templates/stylesheet/852881080.modify.tem.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 <title>passed.modify</title>
-<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen">
+<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen" />
 </head>
 <body>
 <!--##begin-->
@@ -15,26 +16,24 @@
   }
 //-->
 </script>
-<form method="POST" name="modify" action="!#ausgaben_form_aktion" id="eEd">
+<form method="post" action="!#ausgaben_form_aktion" id="eEd">
     <h1>#(ueberschrift)</h1>
     <p>#(inhalt)</p>
     <p>!#ausgaben_form_error</p>
-    <div class="elements">
-        <label for="oldpass">#(oldpass)</label>
-        !#element_oldpass
-        <label for="newpass">#(newpass)</label>
-        !#element_newpass
-        <label for="chkpass">#(chkpass)</label>
-        !#element_chkpass
-        <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
-        <div class="clearer">&nbsp;</div>
-        <input type="submit" name="send" value="g(send)" class="first" />
-        <input type="reset" name="reset" value="g(reset)" class="next" />
-        <input type="button" name="abort" value="g(abort)" onClick="location='!#ausgaben_form_break'" class="next" />
-        <div class="clearer">&nbsp;</div>
+    <label for="oldpass">#(oldpass)</label>
+    !#element_oldpass
+    <label for="newpass">#(newpass)</label>
+    !#element_newpass
+    <label for="chkpass">#(chkpass)</label>
+    !#element_chkpass
+    <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
+    <div class="clearer">&nbsp;</div>
+    <input type="submit" name="send" value="g(send)" class="first" />
+    <input type="reset" name="reset" value="g(reset)" class="next" />
+    <input type="button" name="abort" value="g(abort)" onClick="location='!#ausgaben_form_break'" class="next" />
+    <div class="clearer">&nbsp;</div>
     <p>!#ausgaben_output</p>
     <p>!#ausgaben_inaccessible</p>
-    </div>
 </form>
 <!--##end-->
 </body>
