--- a/trunk/basement/templates/stylesheet/210295197.list.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.list.tem.html
@@ -19,7 +19,7 @@
             <th align="left">#(login)</th>
             <th align="left">#(surname)</th>
             <th align="left">#(forename)</th>
-            <th align="left">g(modcol)</th>
+            <th align="right">g(modcol)</th>
         </tr>
     </thead>
     <tbody>
