--- a/trunk/basement/templates/stylesheet/auth.logout.tem.html
+++ b/trunk/basement/templates/stylesheet/auth.logout.tem.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 <title>auth.logout</title>
+<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen" />
 </head>
 <body>
 <!--##begin-->
 <p>#(vorher) !#ausgaben_logout_meldung #(nachher)</p>
 <form method="post" action="!#ausgaben_auth_url">
-    <div>
-        <input type="submit" name="logout" value="logout" />
-    </div>
+    <input type="submit" name="logout" value="logout" />
 </form>
 <p>!#ausgaben_logout_rechte</p>
 <!--##end-->
