--- a/trunk/basement/templates/stylesheet/auth.tem.html
+++ b/trunk/basement/templates/stylesheet/auth.tem.html
@@ -3,6 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 <title>auth</title>
+<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen" />
 </head>
 <body>
 <!--##begin-->
