--- a/trunk/basement/templates/stylesheet/search.tem.html
+++ b/trunk/basement/templates/stylesheet/search.tem.html
@@ -1,13 +1,14 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html>
-<!--$Id: base.tem.html 599 2007-07-24 07:28:49Z chaot $-->
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
 <title>search</title>
-<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css">
+<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" />
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen" />
 </head>
 <body>
 <!--##begin-->
+<!--$Id: base.tem.html 599 2007-07-24 07:28:49Z chaot $-->
 #(inhalt)
 <!--##hidedata-result-->
 <!--##loop-result-->
