--- a/trunk/basement/templates/stylesheet/210295197.list.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.list.tem.html
@@ -29,9 +29,9 @@
             <td>!{surname}</td>
             <td>!{forename}</td>
             <td align="right" style="white-space:nowrap">
-                <a href="!{edit}"><img height="18" width="24" src="../../images/default/edit.png" alt="g(edit)" title="g(edit)" /></a>
-                <a href="!{delete}"><img height="18" width="24" src="../../images/default/delete.png" alt="g(delete)" title="g(delete)" /></a>
-                <a href="!{details}"><img height="18" width="24" src="../../images/default/details.png" alt="g(details)" title="g(details)" /></a>
+                <a href="!{edit}"><img src="../../images/default/edit.png" width="24" height="18" alt="g(edit)" title="g(edit)" /></a>
+                <a href="!{delete}"><img src="../../images/default/delete.png" width="24" height="18" alt="g(delete)" title="g(delete)" /></a>
+                <a href="!{details}"><img src="../../images/default/details.png" width="24" height="18" alt="g(details)" title="g(details)" /></a>
             </td>
         </tr>
         <!--##cont-->
@@ -39,8 +39,9 @@
 </table>
 <p style=float:left>#(anzahl)!#ausgaben_anzahl</p>
 <p style=float:right>!#ausgaben_inhalt_selector</p>
+<div style="clear:both"></div>
 <p>!#ausgaben_output</p>
 <p>!#ausgaben_inaccessible</p>
 <!--##end-->
-    </body>
+</body>
 </html>
