--- a/trunk/basement/templates/stylesheet/-555504947.edit-multi.tem.html
+++ b/trunk/basement/templates/stylesheet/-555504947.edit-multi.tem.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 <head>
 <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=iso-8859-1">
 <title>menued.edit-multi</title>
-<link rel="stylesheet" href="../../css/default.css" type="text/css">
+<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen" />
 </head>
 <!--##begin-->
 <!--$Id: -555504947.edit-multi.tem.html 254 2004-11-08 14:43:42Z chaot $-->
