--- a/trunk/basement/templates/stylesheet/210295197.list.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.list.tem.html
@@ -19,7 +19,7 @@
             <th align="left">#(login)</th>
             <th align="left">#(surname)</th>
             <th align="left">#(forename)</th>
-            <th align="right">g(modcol)</th>
+            <th align="left">g(modcol)</th>
         </tr>
     </thead>
     <tbody>
@@ -28,7 +28,7 @@
             <td>!{login}</td>
             <td>!{surname}</td>
             <td>!{forename}</td>
-            <td align="right" style="white-space:nowrap">
+            <td style="white-space:nowrap">
                 <a href="!{edit}"><img src="../../images/default/edit.png" width="24" height="18" alt="g(edit)" title="g(edit)" /></a>
                 <a href="!{delete}"><img src="../../images/default/delete.png" width="24" height="18" alt="g(delete)" title="g(delete)" /></a>
                 <a href="!{details}"><img src="../../images/default/details.png" width="24" height="18" alt="g(details)" title="g(details)" /></a>
