--- a/trunk/basement/templates/stylesheet/210295197.list.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.list.tem.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!--##begin-->
-<!--$Id: 210295197.list.tem.html 277 2004-11-09 02:09:40Z chaot $-->
+<!--$Id$-->
 <h1>#(ueberschrift)</h1>
 <p>#(inhalt)</p>
 <p>!#ausgaben_form_error</p>
@@ -37,8 +37,8 @@
         <!--##cont-->
     </tbody>
 </table>
-<p style=float:left>#(anzahl)!#ausgaben_anzahl</p>
-<p style=float:right>!#ausgaben_inhalt_selector</p>
+<p style="float:left">#(anzahl)!#ausgaben_anzahl</p>
+<p style="float:right">!#ausgaben_inhalt_selector</p>
 <div style="clear:both"></div>
 <p>!#ausgaben_output</p>
 <p>!#ausgaben_inaccessible</p>
