--- a/trunk/basement/templates/stylesheet/auth.logout.tem.html
+++ b/trunk/basement/templates/stylesheet/auth.logout.tem.html
@@ -10,7 +10,9 @@
 <!--##begin-->
 <p>#(vorher) !#ausgaben_logout_meldung #(nachher)</p>
 <form method="post" action="!#ausgaben_auth_url">
-    <input type="submit" name="logout" value="logout" />
+    <fieldset>
+        <input type="submit" name="logout" value="logout" />
+    </fieldset>
 </form>
 <p>!#ausgaben_logout_rechte</p>
 <!--##end-->
