--- a/trunk/basement/templates/stylesheet/search.tem.html
+++ b/trunk/basement/templates/stylesheet/search.tem.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!--##begin-->
-<!--$Id: base.tem.html 599 2007-07-24 07:28:49Z chaot $-->
+<!--$Id$-->
 #(inhalt)
 <!--##hidedata-result-->
 <!--##loop-result-->
@@ -16,7 +16,7 @@
 <p>!{content}</p>
 <!--##cont-->
 <!--##show-->
-!#ausgaben_inaccessible
+<p>!#ausgaben_inaccessible</p>
 <!--##end-->
 </body>
 </html>
