--- a/trunk/basement/templates/stylesheet/210295197.delete.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.delete.tem.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!--##begin-->
-<!--$Id: 210295197.delete.tem.html 277 2004-11-09 02:09:40Z chaot $-->
+<!--$Id$-->
 <form method="post" action="!#ausgaben_form_aktion" id="eEd">
     <h1>#(ueberschrift)</h1>
     <p>#(inhalt)</p>
@@ -18,9 +18,11 @@
     <p>!#ausgaben_rights</p>
     <h2>#(special)</h2>
     <p>!#ausgaben_special</p>
-    <input type="submit" name="delete" value="g(delete)" class="first" />
-    <input type="button" name="cancel" value="g(abort)" onclick="location='!#ausgaben_form_break'" class="next" />
-    <div class="clearer">&nbsp;</div>
+    <fieldset>
+        <input type="submit" name="delete" value="g(delete)" class="first" />
+        <input type="button" name="cancel" value="g(abort)" onclick="location='!#ausgaben_form_break'" class="next" />
+        <div class="clearer">&nbsp;</div>
+    </fieldset>
 </form>
 <p>!#ausgaben_output</p>
 <p>!#ausgaben_inaccessible</p>
