--- a/trunk/basement/templates/stylesheet/210295197.modify.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.modify.tem.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!--##begin-->
-<!--$Id: 210295197.modify.tem.html 278 2004-11-09 02:35:36Z chaot $-->
+<!--$Id$-->
 <script type="text/javascript">
 <!--
   function resetForm(){
@@ -20,7 +20,6 @@
     <h1>#(ueberschrift)</h1>
     <p>#(inhalt)</p>
     <p>!#ausgaben_form_error</p>
-    <div class="clearer">&nbsp;</div>
     <fieldset class="float">
         <label for="vorname">#(vorname)
             !#element_vorname
@@ -57,11 +56,13 @@
             <input type="submit" name="add[]" value="#(add)" />
         </label>
     </fieldset>
+    <fieldset>
         <input name="form_referer" type="hidden" value="!#ausgaben_form_referer" class="hidden" />
         <input type="submit" name="send[]" value="g(send)" class="first" />
         <input type="reset" name="reset" value="g(reset)" onclick="resetForm()" class="next" />
         <input type="button" name="abort" value="g(abort)" onclick="location='!#ausgaben_form_break'" class="next" />
-    <div class="clearer">&nbsp;</div>
+        <div class="clearer">&nbsp;</div>
+    </fieldset>
     <p>!#ausgaben_output</p>
     <p>!#ausgaben_inaccessible</p>
 </form>
