--- a/trunk/basement/templates/stylesheet/210295197.list.tem.html
+++ b/trunk/basement/templates/stylesheet/210295197.list.tem.html
@@ -13,7 +13,7 @@
 <p>#(inhalt)</p>
 <p>!#ausgaben_form_error</p>
 <p><a href="!#ausgaben_link_new">g(new)</a></p>
-<table width="100%" border="0" cellspacing="0" cellpadding="2">
+<table width="100%" cellspacing="0" cellpadding="2">
     <thead>
         <tr>
             <th align="left">#(login)</th>
