--- a/trunk/basement/templates/stylesheet/-555504947.edit-multi.tem.html
+++ b/trunk/basement/templates/stylesheet/-555504947.edit-multi.tem.html
@@ -38,7 +38,7 @@
         <label for="template">#(refid)!#element_refid</label>
         <label for="entry">#(picture)!#element_picture</label>
         <label for="sort">#(sort)!#element_sort</label>
-        <label for="level">#(level)</label>!#element_level
+        <label for="level">#(level)!#element_level</label>
     </fieldset>
 
     <label for="mandatory">#(new_lang)</label>
