--- a/trunk/basement/templates/stylesheet/-555504947.edit-single.tem.html
+++ b/trunk/basement/templates/stylesheet/-555504947.edit-single.tem.html
@@ -44,7 +44,7 @@
         <label for="template">#(refid)!#element_refid</label>
         <label for="entry">#(picture)!#element_picture</label>
         <label for="sort">#(sort)!#element_sort</label>
-        <label for="level">#(level)</label>!#element_level
+        <label for="level">#(level)!#element_level</label>
     </fieldset>
 
     <h2>#(lang)</h2>
