--- a/trunk/basement/templates/stylesheet/imgb.tem.html
+++ b/trunk/basement/templates/stylesheet/imgb.tem.html
@@ -1,29 +1,14 @@
-<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
-<html><head><!--$Id: imgb.tem.html,v 1.2 2006/07/26 15:05:45 intra_cvs Exp $-->
-
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-    <title>imgb</title>
-    <link rel="stylesheet" href="imgb.tem-Dateien/net.asc" type="text/css">
-    <style>
-
-        .imgb div img {
-            border:0;
-        }
-        .imgb p {
-            padding-left:2px;
-            border:1px solid silver;
-        }
-        .imgb p a {
-            padding-left:20px;
-            background: url(/images/net/filefind.png) no-repeat;
-        }
-    </style>
-
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-15" />
+<title>leer.delete</title>
+<link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" media="screen" />
+<link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" media="screen" />
 </head>
-<body bgcolor="#ffffff">
-
+<body>
 <!--##begin-->
+<!--$Id: imgb.tem.html,v 1.2 2006/07/26 15:05:45 intra_cvs Exp $-->
 <div class="imgb" style="margin:!#ausgaben_tspacepx !#ausgaben_rspacepx !#ausgaben_bspacepx !#ausgaben_lspacepx;width:!#ausgaben_tabwidthpx;!#ausgaben_float">
     <div>
         !#ausgaben_linka
@@ -32,6 +17,6 @@
     </div>
     <p>!#ausgaben_linka!#ausgaben_beschriftung!#ausgaben_linkb</p>
 </div>
-
 <!--##end-->
-</body></html>
+</body>
+</html>
