--- a/trunk/basement/templates/default/base.tem.html
+++ b/trunk/basement/templates/default/base.tem.html
@@ -5,8 +5,8 @@
 <head>
     <meta name="author" content="Werner Ammon (chaos.de)" />
     <meta http-equiv="content-type" content="text/html;charset=iso-8859-15" />
-    <link rel="stylesheet" href="../../css/stylesheet/screen.css" type="text/css" />
-    <link rel="stylesheet" href="../../css/stylesheet/eed.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/default/screen.css" type="text/css" />
+    <link rel="stylesheet" href="../../css/default/eed.css" type="text/css" />
     <title>!#specialvars_pagetitle</title>
 </head>
 <body>
