--- a/trunk/basement/css/default/eed.css
+++ b/trunk/basement/css/default/eed.css
@@ -63,7 +63,8 @@ a img{
     float: left;
     clear: both;
     display: block;
-    width: 100%;
+    width: 100% !important;
+    width: 80%; /*to fix IE6 position*/
     padding-left: 40px;
 }
 
@@ -95,14 +96,14 @@ a img{
 
     #eEd .first {
         margin-left: 40px !important;
-        margin-left: 80px; /*to fix IE6 position*/
+        margin-left: 10px; /*to fix IE6 position*/
         width: 120px;
         clear:both;
     }
 
     #eEd .next {
         margin-left: 10px !important;
-        margin-left: 7px; /*to fix IE6 position*/
+        margin-left: 10px; /*to fix IE6 position*/
         width: 100px;
     }
 
@@ -144,7 +145,7 @@ div.clearer {
     clear: none;
     float: left;
     display: block;
-    padding-right: 2px;
+    padding-right: 2px !important;
     white-space: nowrap; /*to fix ie6 wrapping*/
 }
 
