--- a/trunk/basement/css/default/screen.css
+++ b/trunk/basement/css/default/screen.css
@@ -24,6 +24,9 @@ body {
     line-height: 1.5em;
     background: #fff;
     color: #454545;
+    overflow-x: auto;
+    overflow-y: scroll !important;
+    overflow-y: auto;
 }
 
 a {
