--- a/trunk/basement/templates/default/base.tem.html
+++ b/trunk/basement/templates/default/base.tem.html
@@ -53,6 +53,14 @@
         </div>
 
         <div id="right">
+            <!--##hide-level2-->
+	    <h3>#(ueberschrift)</h3>
+            <ul>
+                <!--##loop-level2-->
+                <li><a href="!{link}" title="!{title}" class="!{class}">!{item}</a></li>
+                <!--##cont-->
+            </ul>
+            <!--##show-->
             #{auth}
         </div>
 
