--- a/trunk/basement/templates/devel/base.tem.html
+++ b/trunk/basement/templates/devel/base.tem.html
@@ -1,7 +1,7 @@
 <!--##begin-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-<!--$Id: base.tem.html 789 2007-09-14 12:14:02Z chaot $-->
+<!--$Id: base.tem.html 825 2007-09-20 13:36:00Z chaot $-->
 <head>
     <meta name="author" content="Werner Ammon (chaos.de)" />
     <meta http-equiv="content-type" content="text/html;charset=iso-8859-15" />
@@ -53,6 +53,14 @@
         </div>
 
         <div id="right">
+            <!--##hide-level2-->
+	    <h3>#(ueberschrift)</h3>
+            <ul>
+                <!--##loop-level2-->
+                <li><a href="!{link}" title="!{title}" class="!{class}">!{item}</a></li>
+                <!--##cont-->
+            </ul>
+            <!--##show-->
             #{auth}
         </div>
 
