--- a/trunk/basement/css/devel/eed.css
+++ b/trunk/basement/css/devel/eed.css
@@ -1,7 +1,7 @@
 /* project: eWeBuKi stylesheet template for eWeBuKi editor (eEd's) styles
    based on a design from: luka cvrk (www.solucija.com)
 
-   $Id: eed.css 801 2007-09-16 18:20:51Z chaot $ */
+   $Id$ */
 
 
 
